--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -26,18 +26,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<!--
-				<a href="../" class="navbar-brand">
-					<img src="/images/icons/3D-Grass-icon.png" >
-					<b class="navbar-text">MineBlock</b>
-				</a>
 				
-				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>c
-				</button>									
-				-->
 			</div><!-- / navbar-heaer-->
 			<button class="btn btn-success navbar-btn" type="submit" onclick="do_process()" id='run_btn'>Run Code</button>
                         <div class="btn-group">
@@ -67,8 +56,8 @@
 				<div class="col-lg-12">
 					<ul class="list-unstyled">
 						<li class="pull-right"><a href="#top">Back to top</a></li>
-						<li><a href="http://#" >Blog</a></li>						
-						<li><a href="https://github.com/">GitHub</a></li>						
+						<li><a href="http://tkblocky.blogspot.com/" >Blog</a></li>						
+						<li><a href="https://github.com/somchaisomph/mineblock">GitHub</a></li>						
 					</ul>
 					<p>Made by <a href="#" rel="nofollow">N3A Media</a></p>
 				</div>
