--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -205,7 +205,7 @@
   <category name="Functions" custom="PROCEDURE"></category>
   
     <sep></sep>
-    <category name="Math">
+    <category name="Math and Number">
     <block type="math_number"></block>
     <block type="math_arithmetic"></block>
     <block type="math_trig"></block>
