--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -228,10 +228,13 @@
 		<block type="steve_start_drawing_pos"></block>
     </category>
     <sep></sep>
-    <category name="Where is it?">
+     <category name="Where is it?">
 		<block type="steve_where_x"></block>
 		<block type="steve_where_y"></block>
 		<block type="steve_where_z"></block>
+		<block type="steve_get_tile_pos_x"></block>
+		<block type="steve_get_tile_pos_y"></block>
+		<block type="steve_get_tile_pos_z"></block>
     </category>
     <sep></sep>
     <category name="Settings">
@@ -240,6 +243,8 @@
 		<block type="steve_set_position"></block>
 		<block type="steve_speed"></block>
 		<block type="steve_set_pen_block"></block>
+		<block type="steve_get_tile_pos_x"></block>
+		<block type="steve_set_tile_pos"></block>
     </category>
     <sep></sep>
     <category name="Block Types">
