--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -219,8 +219,7 @@
    
     <sep></sep>
     <category name="Movement">
-		<block type="steve_forward"></block>
-		<block type="steve_backward"></block>
+		<block type="place_block_hor"></block>
 		<block type="steve_left"></block>
 		<block type="steve_right"></block>
 		<block type="steve_up"></block>
