--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -220,10 +220,7 @@
     <sep></sep>
     <category name="Movement">
 		<block type="place_block_hor"></block>
-		<block type="steve_left"></block>
-		<block type="steve_right"></block>
-		<block type="steve_up"></block>
-		<block type="steve_down"></block>
+		<block type="turnning_dir"></block>
 		<block type="steve_start_drawing_pos"></block>
     </category>
     <sep></sep>
