--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -221,7 +221,7 @@
     <category name="Movement">
 		<block type="place_block_hor"></block>
 		<block type="turnning_dir"></block>
-		<block type="steve_start_drawing_pos"></block>
+		<block type="set_pos_to"></block>
     </category>
     <sep></sep>
      <category name="Where is it?">
