--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -30,12 +30,12 @@
 			</div><!-- / navbar-heaer-->
 			<button class="btn btn-success navbar-btn" type="submit" onclick="do_process()" id='run_btn'>Run Code</button>
                         <div class="btn-group">
-                           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                               Database <span class="caret"></span>
+                           <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                               Data <span class="caret"></span>
   			   </button>
   				<ul class="dropdown-menu">
 				    <li><a href="#" id='export_btn' data-toggle="modal" data-target="#backupModal">Save blocks </a></li>
-				    <li><a href="#" data-toggle="modal" data-target="#restoreModal" >Retrieve blocks </a></li>
+				    <li><a href="#" data-toggle="modal" data-target="#restoreModal" >Manage blocks </a></li>
 				  </ul>
 			</div>
 
@@ -56,8 +56,8 @@
 				<div class="col-lg-12">
 					<ul class="list-unstyled">
 						<li class="pull-right"><a href="#top">Back to top</a></li>
-						<li><a href="http://tkblocky.blogspot.com/" >Blog</a></li>						
-						<li><a href="https://github.com/somchaisomph/mineblock">GitHub</a></li>						
+						<li><a href="http://#" >Blog</a></li>						
+						<li><a href="https://github.com/">GitHub</a></li>						
 					</ul>
 					<p>Made by <a href="#" rel="nofollow">N3A Media</a></p>
 				</div>
@@ -158,6 +158,7 @@
     </div>
   </div>
 </div>
+
 <!-- Waiting Process Modal -->
 <div class="modal fade bs-example-modal-sm" id="waitingModal" tabindex="-1" role="dialog" >
   <div class="modal-dialog" role="document">
@@ -172,14 +173,15 @@
            <div class="col-md-4">Please Wait</div>
            <div class="col-md-4"></div>
         </div>
+         
        </div> <!-- / container -->
       </div> <!-- /modal-body -->
       <div class="modal-footer">
+
       </div><!-- / modal-body -->
     </div>
   </div>
 </div>
-
 <!-- toolbox -->
   <xml id="toolbox" style="display: none">
    <category name="Loops" colour="120">
@@ -283,7 +285,6 @@
 
   <script src="/js/blockly_compressed.js"></script>
   <script src="/js/python_compressed.js"></script>
-  <!--script src="/js/javascript_compressed.js"></script --> 
   <script src="/js/mc/generators/cmd_grp.js"></script>
   <script src="/js/mc/generators/mc_turtle.js"></script>
   <script src="/js/blocks_compressed.js"></script>
@@ -291,7 +292,8 @@
   <script>
     var selected_id = new Array();
     var rows_per_page = 10;
-    
+    var process_id = 0;
+
      $('#restoreModal').on('shown.bs.modal', function (e) {
        get_blocks_from_db();
       });
@@ -312,7 +314,9 @@
 			trashcan: true});
   
   
- function do_process(){
+  function do_process(){
+
+	
 	  code = Blockly.Python.workspaceToCode(workspace);
 	  $.ajax({
 		  url: "/process", 
@@ -332,6 +336,7 @@
                             process_id = result;
                             console.log(result);
                          }
+			
                         $('#waitingModal').modal('hide');
 			},
                  beforeSend:function(){
