--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -289,6 +289,8 @@
   <script src="/js/mc/generators/mc_turtle.js"></script>
   <script src="/js/blocks_compressed.js"></script>
   <script src="/js/msg/js/en.js"></script>
+  <script src="/js/Blob.js"></script>
+  <script src="/js/FileSaver.min.js"></script>
   <script>
     var selected_id = new Array();
     var rows_per_page = 10;
