--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -25,8 +25,7 @@
 <body>
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header">
-				
+			<div class="navbar-header">				
 			</div><!-- / navbar-heaer-->
 			<button class="btn btn-success navbar-btn" type="submit" onclick="do_process()" id='run_btn'>Run Code</button>
                         <div class="btn-group">
@@ -34,8 +33,10 @@
                                Data <span class="caret"></span>
   			   </button>
   				<ul class="dropdown-menu">
-				    <li><a href="#" id='export_btn' data-toggle="modal" data-target="#backupModal">Save blocks </a></li>
-				    <li><a href="#" data-toggle="modal" data-target="#restoreModal" >Manage blocks </a></li>
+				    <li><a href="#" id='export_btn' data-toggle="modal" data-target="#backupModal">Save </a></li>
+				    <li><a href="#" data-toggle="modal" data-target="#restoreModal" >Manage </a></li>
+				    <li><a href="#" data-toggle="modal" data-target="#loadLocalModal">Import </a></li>
+				    <li><a href="#" data-toggle="modal" data-target="#exportModal">Export </a></li>
 				  </ul>
 			</div>
 
@@ -117,7 +118,7 @@
       <div class="modal-body" id="warning-msg-div">
         <form>
   		<div class="form-group">
-    		<label for="key-input">What is your blocks name ? : </label>
+    		<label for="key-input">Specify your project name : </label>
 		<input type="text" class="form-control" id="key-input" placeholder="Steve">
     		
   		</div>
@@ -182,6 +183,63 @@
     </div>
   </div>
 </div>
+
+<!-- Load local Modal -->
+<div class="modal fade" id="loadLocalModal" tabindex="-1" role="dialog" >
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" ><span class="label label-info">Load Local File</span></h4>
+      </div><!-- / modal-header -->
+      <div class="modal-body">
+        <div class="container-fluid">
+          <form>
+  		<div class="form-group">
+    		<label for="key-input">Select file : </label>
+		<input type="file" class="form-control" id="local-file-input" >
+    		
+  		</div>
+  
+	</form>
+         <div  id="load-result">
+         </div>
+       </div> <!-- / container -->
+      </div> <!-- /modal-body -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Import</button>
+      </div><!-- / modal-body -->
+    </div>
+  </div>
+</div>
+
+<!-- Write local Modal -->
+<div id="exportModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>	
+        <h4 class="modal-title"><span class="label label-info">Back up your Blocks</span></h4>
+      </div>
+      <div class="modal-body" id="warning-msg-div">
+        <form>
+  		<div class="form-group">
+    		<label for="key-input">Export As : </label>
+		<input type="text" class="form-control" id="export-name" placeholder="Steve">
+    		
+  		</div>
+  
+	</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success"  onclick="exportData()">OK</button>
+      </div>
+    </div>
+
+  </div>
 <!-- toolbox -->
   <xml id="toolbox" style="display: none">
    <category name="Loops" colour="120">
@@ -295,18 +353,20 @@
     var selected_id = new Array();
     var rows_per_page = 10;
     var process_id = 0;
+    var local_file_input=document.getElementById("local-file-input");
+    local_file_input.addEventListener('change', loadLocalData);
 
      $('#restoreModal').on('shown.bs.modal', function (e) {
        get_blocks_from_db();
       });
-      $('#restoreModal').on('hide.bs.modal',function(e){
+     $('#restoreModal').on('hide.bs.modal',function(e){
         $('#blocks-table').html("");
 	selected_id.length=0;
       })
      
 
-      var blocklyDiv = document.getElementById('blocklyDiv');
-      var workspace = Blockly.inject(blocklyDiv,
+     var blocklyDiv = document.getElementById('blocklyDiv');
+     var workspace = Blockly.inject(blocklyDiv,
         {	media: '/media/',
 			toolbox: document.getElementById('toolbox'),
 			grid: {spacing: 20,
@@ -491,6 +551,30 @@ function delete_selected_ids(){
    });
 }
 
+function loadLocalData(evt){
+   document.getElementById('load-result').innerHTML="";
+   var file = local_file_input.files[0];
+   var textType = /text.xml/;
+   if (file.type.match(textType)) {
+      var reader = new FileReader();
+       reader.onload = function(e) {
+	  var xml = Blockly.Xml.textToDom(reader.result);
+          Blockly.Xml.domToWorkspace( Blockly.mainWorkspace, xml );
+	}
+      reader.readAsText(file);	
+   }else{
+      document.getElementById('load-result').innerHTML="<b>File Not Supported</b>";
+   }
+   
+}
+function exportData(){
+  var fn = $('#export-name').val()+".xml";
+  var xml = Blockly.Xml.workspaceToDom(Blockly.mainWorkspace);
+  var data = Blockly.Xml.domToText(xml);
+  var blob = new Blob([data], {type: 'text/xml'});
+  saveAs(blob, fn);
+  $('#exportModal').modal('hide');
+}
   </script>
 </body>
 </html>
