--- a/mcblock/templates/index.html
+++ b/mcblock/templates/index.html
@@ -460,6 +460,7 @@
 		  url: "/process", 
 		  data:{"mc_code":code},
 		  success: function(result){
+		  	$('#waitingModal').modal('hide');
 	                if(result == "ok"){
 			    console.log("Done");
                          }else if (result=="fail"){
@@ -467,7 +468,7 @@
 				$('#warningModal').modal('show')
                             console.log("Check system");
 			 }else if (result=="mc not started"){
-				$('#warning-msg').html("<b>Please start Minecraft Pi</b>");
+				$('#warning-msg').html("<b>Minecraft Pi must be running.</b>");
 				$('#warningModal').modal('show')
 			    console.log("Please start Minecraft Pi")
                          }else{
@@ -475,7 +476,7 @@
                             console.log(result);
                          }
 			
-                        $('#waitingModal').modal('hide');
+                        
 			},
                  beforeSend:function(){
                     $('#waitingModal').modal({'backdrop':'static'});
